--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appnope==0.1.4
 asttokens==3.0.0
 certifi==2025.6.15
 charset-normalizer==3.4.2
+click==8.2.1
 comm==0.2.2
 debugpy==1.8.14
 decorator==5.2.1
