--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ idna==3.10
 ipykernel==6.29.5
 ipython==8.37.0
 jedi==0.19.2
+joblib==1.5.1
 jupyter_client==8.6.3
 jupyter_core==5.8.1
 kiwisolver==1.4.8
@@ -40,8 +41,11 @@ python-dotenv==1.1.0
 pytz==2025.2
 pyzmq==27.0.0
 requests==2.32.4
+scikit-learn==1.7.1
+scipy==1.15.3
 six==1.17.0
 stack-data==0.6.3
+threadpoolctl==3.6.0
 tornado==6.5.1
 tqdm==4.67.1
 traitlets==5.14.3
